[package]
name = "backbone"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4" }

mysql = "18.2.0"
threadpool = "1.8.1"
crossbeam ="0.7.3"
lazy_static = "1.4.0"
tokio = { version = "0.2.21", features = ["full"] }
rand = "0.7.3"
log = "0.4"
once_cell = "1.4.0"
#cdrs = "3.0.0-beta.2"
cdrs = "2"
#sqlite = "0.*"
#diesel = { version = "1.4.5", features =["sqlite"] }

#sqlx = "0.3.5"
rusqlite = "0.23.1"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.116"
mime-db = "0.1.5"

prost = "0.6.1"
prost-types = "0.6" # Only necessary if using Protobuf well-known types:
prost-build = { version ="0.6.1" }
quick-protobuf = "0.8.0"

#tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
http = "0.2.1"

bincode = "1.3.1"

bytes = "0.5.6"

#serde = "1.0.111"
#serde_json = "1.0.57"

cdrs-async = "0.1.0-alpha.0"
async-trait = "0.1.21"

cdrs_helpers_derive = "0.3.3"
maplit = "1.0.2"
reqwest = "0.10.8"
image = "0.23.11"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[build-dependencies]
prost-build = { version ="0.6.1" }
pb-rs = "0.9.0"