[package]
name = "client"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5" }

mysql = "18.2.0"
threadpool = "1.8.1"
crossbeam ="0.7.3"
lazy_static = "1.4.0"
tokio = { version = "0.2.21", features = ["full"] }
rand = "0.7.3"
log = "0.4"
once_cell = "1.4.0"
cdrs = { version = "2" }
#sqlite = "0.*"
#diesel = { version = "1.4.5", features =["sqlite"] }

#sqlx = "0.3.5"
rusqlite = "0.23.1"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.56"
mime-db = "0.1.5"

prost = "0.6"
prost-types = "0.6" # Only necessary if using Protobuf well-known types:
quick-protobuf = "0.7"

#tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
http = "0.2.1"

reqwest = { version = "0.10", features = ["json"] }

#serde = "1.0.111"
#serde_json = "1.0.57"

[build-dependencies]
prost-build = { version ="0.6" }
pb-rs = "0.9.0"