[package]
name = "chunk"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chunk_proto = {path = "../chunk_proto"}

clap = "3.0.0-beta.2"
tokio = "1.7.0"
tokio-util = "0.6.7"
hyper = "0.14.9"

serde = "1.0.126"
serde_derive = "1.0.126"
serde_qs = "0.8.3"
serde_json = "1.0.64"

warp = "0.3.1"

tonic = "0.4.3"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4.2"