[package]
name = "chunk_proto"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = "1.7.0"
tokio-util = "0.6.7"
hyper = "0.14.9"

tonic = "0.4.3"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4.2"
