[package]
name = "play"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../../lib/shared" }
tokio = { version = "1", features = ["full"] }
grammers-tl-types = "0.2.0"
prost = "0.7.0"
byteorder = "1"
cdrs = "2.3.3"

