[package]
name = "play2"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = "3.0.0-beta.2"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_qs = "0.8.3"