[package]
name = "shared"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.116"

tokio = { version = "0.2.21", features = ["full"] }
#tokio = { version = "0.3.3", features = ["full"] } # Error in hyper in this version
async-trait = "0.1.42"
rand = "0.7.3"
once_cell = "1.4.0"

prost = "0.6.1"
prost-types = "0.6" # Only necessary if using Protobuf well-known types:

hyper = "0.13.9"
http = "0.2.1"

bytes = "0.5.6"
reqwest = "0.10.8"
image = "0.23.11"

rocksdb = "0.15.0"
byteorder = "1"

[build-dependencies]
prost-build = { version ="0.6.1" }
