[package]
name = "shared"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.116"

#tokio = { version = "0.2.21", features = ["full"] }
tokio = { version = "1.2.0", features = ["full"] }
#tokio = { version = "0.3.3", features = ["full"] } # Error in hyper in this version
async-trait = "0.1.42"
rand = "0.7.3"
once_cell = "1.4.0"

#prost = "0.6.1"
prost = "0.7.0"
prost-types = "0.6" # Only necessary if using Protobuf well-known types:

hyper = { version = "0.14.1", features = ["full"] }
http = "0.2.1"

bytes = "1.0.0"
reqwest = { version = "0.11.1",  features = ["blocking", "json"] }
image = "0.23.11"

#rocksdb = "0.15.0"
byteorder = "1"
cdrs = "2.3.3"
mysql_async = "0.27.1"
mysql_common = "0.26.0"
mysql = "20.1.0"

# used for chrome driver
#color-eyre = "0.5.10"
thirtyfour = "0.23.0"

# for telegram username html
scraper = "0.12.0"
html2text = "0.2.1"

[build-dependencies]
prost-build = { version ="0.6.1" }
