[package]
name = "cmaster"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../../lib/shared"}
tokio = { version = "0.2.21", features = ["full"] }
prost = "0.6.1"
async-trait = "0.1.42"

hyper = "0.13.9"
http = "0.2.1"

bytes = "0.5.6"
reqwest = "0.10.8"
image = "0.23.11"
once_cell = "1.5.2"

rocksdb = "0.15.0"
byteorder = "1"
