[package]
name = "gateway"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../../lib/shared"}
#tokio = { version = "0.2.21", features = ["full"] }
tokio = { version = "1.2.0", features = ["full"] }
prost = "0.7.0"
async-trait = "0.1.42"

#hyper = { version = "0.14.1", features = ["full"] }
http = "0.2.1"

bytes = "0.5.6"
reqwest = { version = "0.11.0" ,  features = ["blocking", "json"] }
#image = "0.23.11"
once_cell = "1.5.2"