[package]
name = "logic"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../../lib/shared"}
tokio = { version = "1.0.1", features = ["full"] }
prost = "0.7.0"
async-trait = "0.1.42"

hyper = { version = "0.14.1", features = ["full"] }
http = "0.2.1"

bytes = "1.0.0"
reqwest = "0.10.8"
image = "0.23.11"
once_cell = "1.5.2"

#rocksdb = "0.15.0"
byteorder = "1"

#foundationdb = "0.4"
#futures = "0.3"

#tikv-client = { git = "https://github.com/tikv/client-rust.git" }

cdrs = "3.0.0-beta.2"
#bindgen = "0.55.0"
