[package]
name = "tmp"
version = "0.1.0"
authors = ["Hamid <7atashfeshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio + rustls
#sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "mysql"] }
#structopt = { version = "0.3", features = [ "paw" ] }
#anyhow = "1.0"
#paw = "1.0"

tokio = { version = "1.0", features = ["full"] }
mysql_async = "0.27"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql" ] }
mysql_common = "0.26.0"